# recaper

./: .env.example  .gitignore  README.md  README.ru.md  pyproject.toml  run.py
src/recaper/: __init__.py  __main__.py  config.py  exceptions.py  models.py
src/recaper/cli/: app.py
src/recaper/pipeline/: __init__.py  context.py  progress.py  runner.py
src/recaper/pipeline/stages/: analyze.py  base.py  detect.py  extract.py  render.py  review.py  script.py  unpack.py  voiceover.py
src/recaper/web/: __init__.py  app.py
src/recaper/web/routes/: api.py  pages.py
src/recaper/web/services/: __init__.py  jobs.py
src/recaper/web/static/css/: style.css
src/recaper/web/static/js/: app.js
src/recaper/web/templates/: 404.html  base.html  config.html  index.html  job.html
tests/: conftest.py
tests/test_pipeline/: test_context.py  test_models.py  test_render.py  test_runner.py  test_unpack.py  test_voiceover.py
